--- a/css/index.css
+++ b/css/index.css
@@ -85,7 +85,6 @@ header {
 #section1 {
     width: 100%;
     display: flex;
-    flex-direction: row;
     flex-direction: column;
     padding: 0 150px 0 150px;
 }
@@ -203,6 +202,23 @@ header {
 
 #instructions-button-wrapper {
     padding: 25px 0 0 160px;
+}
+
+/* INFO SECTION */
+#info-section {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    padding: 50px 150px 0 150px;
+}
+
+#info-section ul li {
+    list-style-type: disc;
+}
+
+#json-info{
+    display: flex;
+    flex-direction: column;
 }
 
 @media only screen and (max-width: 1100px) {
